<resources>
    <string name="app_name">איחוד הצלה כרמל</string>
    <string name="button_location_label">שלח מיקומים</string>
    <string name="button_ems_pocket_label">פנקס כיס</string>
    <string name="button_shabat_register_label">רישום לשבת</string>
    <string name="button_orders_label">הזמנות</string>
    <string name="button_warehouse_admin_label">ניהול הזמנות</string>
    <string name="button_shabat_admin_label">ניהול כונני שבת</string>
    <string name="button_call_1221_label">התקשר 1221</string>
    <string name="button_send_my_location_label">שלח את המיקום שלי</string>
    <string name="location_search__menu_title">חפש</string>
    <string name="shabat_list_delete__menu_title">אפס כונני שבת</string>
    <string name="dialog_confirm_order_accepted">לסמן את ההזמנה כהתקבלה ?</string>
    <string name="dialog_confirm_delete">כן</string>
    <string name="dialog_dismiss_delete">לא</string>
    <string name="new_order_topic">production-new-orders-new</string>
    <string name="sp_last_name">SP_USER_LAST_NAME</string>
    <string name="sp_first_name">SP_USER_FIRST_NAME</string>
    <string name="title_activity_shabat_register">רישום לכוננות שבת</string>
    <string name="shabat_spinner_tv_text">עיר</string>
    <string name="shabat_spinner_tv_comment">הערות</string>
    <string name="shabat_spinner_tv_address">כתובת</string>
    <string name="shabat_first_name_label">שם</string>
    <string name="shabat_last_name_label">משפחה</string>
    <string name="FIREBASE_DATABASE_PREFIX">production-new</string>
    <string name="title_activity_new_order">הזמנה חדשה</string>
    <string name="shabat_mirs_label">מירס</string>
    <string name="shabat_update_success">עודכן בהצלחה</string>
    <string name="shabat_registered_on">רשום</string>
    <string name="shabat_registered_off">לא רשום</string>
    <string name="shabat_register_switch_text">הרשם</string>
    <string name="shabat_user_details_label">פרטי הכונן</string>
    <string name="title_activity_shabat_list">רשימת כונני שבת</string>
    <string name="no_waze_installed">וויז לא מותקן</string>
    <string name="user_uid_key">SP_USER_UID</string>
    <string name="display_name_key">SP_USER_DISPLAY_NAME</string>
    <string name="is_admin">SP_USER_IS_ADMIN</string>
    <string name="is_shabat_admin">SP_USER_IS_SHABAT_ADMIN</string>
    <string name="is_wh_admin">SP_USER_IS_WH_ADMIN</string>
    <string name="user_mirs">SP_USER_MIRS</string>
    <string name="order_success">ההזמנה נשלחה בהצלחה</string>
    <string name="new_order_no_items">לא סומנו שום פריטים</string>
    <string name="no_location_detected">לא נמצא מיקום</string>
    <string name="permission_rationale">על מנת לשלוח את המיקום שלך האפליקציה זקוקה לאישור כישה למיקום של המכשיר</string>
    <string name="permission_denied_explanation">לא ניתן לקבל הרשאה למיקום</string>
    <string name="location_maps_image_button_cd">נווט</string>
    <string name="location_whatsapp_image_button_cd">שלח מיקום</string>
    <string name="dialog_new_order_branches_title">בחר מרכז ציוד לאיסוף</string>
    <string name="dialog_new_order_confirm">שלח</string>
    <string name="dialog_new_order_dismiss">בטל</string>
    <string name="new_order_notification_body_start">הזמנה חדשה מ</string>
    <string name="settings">הגדרות</string>
    <string name="united_phone_number">1221</string>
    <string name="location_found">המיקום נמצא</string>
    <string name="send_location_question">שלח את המיקום</string>
    <string name="my_location">המיקום שלי</string>
    <string name="title_activity_order_list">הזמנות פתוחות</string>
    <string name="title_activity_order_detail">פרטי הזמנה</string>
    <string name="order_detail_from_user">הוזמן על ידי</string>
    <string name="order_detail_from_branch">הוזמן עבור סניף</string>
    <string name="new_order_deleted_notification_body">ההזמנה מחכה לך</string>
    <string name="previous">הקודם</string>
    <string name="next">הבא</string>
    <string name="app_name_with_index">פנקס כיס לחובש (%1$d/%2$d)</string>
    <string name="title_activity_pocket_pdf">פנקס כיס לחובש</string>
    <string name="new_order_user_topic_prefix">orders-production-new-</string>
    <string name="title_activity_locations2">מיקומים</string>
    <string name="button_report_case_label">תיעוד מקרים</string>
    <string name="shabat_register_address_hint">הכנס את הכתובת שלך</string>
    <string name="shabat_register_comment_hint">הכנס הערות במידת הצורך</string>
    <string name="sp_wh_admin_branch">SP_USER_WH_ADMIN_BRANCH</string>
    <string name="main_manu_signout_title">התנתק</string>
    <string name="main_manu_signin_title">התחבר</string>
    <string name="title_activity_orders">הזמנות</string>
    <string name="title_activity_own_order_detail">תיאור הזמנה</string>
    <string name="dialog_confirm_order_ready">לסמן את ההזמנה כמוכנה ?</string>
    <string name="title_activity_red_alert">האימייל האדום</string>
    <string name="first_name_label">שם פרטי</string>
    <string name="last_name_label">שם משפחה</string>
    <string name="ra_add_picture_button_label">הוסף תמונה</string>
    <string name="ra_menu_send">שלח</string>
    <string name="ra_fn_required">שם פרטי נדרש</string>
    <string name="ra_ln_required">שם משפחה נדרש</string>
    <string name="ra_content_required">תוכן נדרש</string>
    <string name="red_alert_folder">production/redalert/</string>
    <string name="ra_email_himt">כתובת אימייל</string>
    <string name="ra_content_lablel">תוכן ההודעה</string>
    <string name="title_activity_red_alert_list">RedAlertListActivity</string>
    <string name="ral_dispaly_name_cd">שם השולח</string>
    <string name="button_manage_redalert">ניהול אימייל אדום</string>
    <string name="title_activity_red_alert_details">RedAlertDetailsActivity</string>
</resources>
