<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_nested_scroll_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true"

    >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        tools:context=".ui.MainActivity"
        >

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/button_call_1221"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryDarkColor"
            android:textColor="@color/primaryTextColorLight"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_call_1221_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_report_case"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/secondaryDarkColor"
            android:textColor="@color/primaryTextColorLight"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_report_case_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_call_1221" />

        <Button
            android:id="@+id/button_send_my_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/secondaryLightColor"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_send_my_location_label"
            android:textColor="@color/primaryTextColorLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_report_case" />

        <Button
            android:id="@+id/button_locations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/primaryLightColor"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_location_label"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_send_my_location" />


        <Button
            android:id="@+id/button_ems_pocket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/secondaryColor"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_ems_pocket_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button_send_my_location" />

        <Button
            android:id="@+id/button_shabat_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/primaryLightColor"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_shabat_register_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button_ems_pocket"
            tools:text="רישום לשבת" />

        <Button
            android:id="@+id/button_new_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/secondaryColor"
            android:elevation="4dp"
            android:shadowColor="@android:color/darker_gray"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_orders_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_locations" />

        <Button
            android:id="@+id/button_warehouse_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/primaryLightColor"
            android:elevation="4dp"
            android:shadowColor="@android:color/darker_gray"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_warehouse_admin_label"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_new_order" />

        <Button
            android:id="@+id/button_shabat_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/secondaryColor"
            android:elevation="4dp"
            android:shadowColor="@android:color/darker_gray"
            android:stateListAnimator="@animator/button_elevation"
            android:text="@string/button_shabat_admin_label"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/button_shabat_register" />



    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>